--- a/styles/letitout.css
+++ b/styles/letitout.css
@@ -1362,14 +1362,19 @@
     color: #c10016;
     padding: 0.7rem 2.2rem;
     cursor: pointer;
-    border-bottom: 2.5px solid transparent;
+    border-bottom: 1px solid var(--letitout-border-light);
     transition: border 0.2s, color 0.2s;
 }
-.letitout-my-posts-tabs .active {
-    color: #c10016;
-    border-bottom: 2.5px solid #c10016;
-    font-weight: 700;
+
+.my-posts-tab.active {
+    color: black !important; /* Changed from default */
+    border-bottom: 2px solid var(--letitout-primary);
 }
+
+.inbox-tab {
+    padding: 1rem;
+}
+
 .letitout-my-posts-tabs button:not(.active) {
     color: #111;
 }
